	  "$" displayed at the beginning of the line. (DLR)
  statusbar()
	- Blank the statusbar after 26 keystrokes instead of 25, for
	  conpatibility with Pico. (DLR)
  edit_draw()
	- Properly ignore zero-length regexes in multi-line regexes as
	  well as single-line ones.  This avoids a segfault when trying
	  to color e.g. "start="$" end="$"". (DLR, found by Trevor
	  Caira)
  update_line()
	- Remove unneeded assert. (DLR)
  edit_redraw()
	- Fix problem where not all lines would be updated properly if
	  we'd scrolled off the screen and the mark was on. (DLR)
  do_credits()
	- Update the last copyright notice to include 2006. (DLR)
- configure.ac:
	- Remove old warnings about color support. (DLR)
	- Remove conditional header checks for fcntl.h and termios.h, as
	  nano won't build without them, and add conditional header
	  check for sys/param.h, as some systems need only limits.h.
	  (DLR)
- doc/faq.html:
	- Add a new section 4.4, and move all section 4 entries after it
	  down one number, to explain how to deal with problems typing
	  Meta-[. (DLR)
	- Add a new section 4.5, and move all section 4 entries after it
	  down one number, to explain a problem that can occur when
	  holding down keys to generate Meta sequences. (Benno
	  Schulenberg, minor tweaks by DLR)
	- Add a few capitalization and wording fixes. (DLR)
	- Remove section 4.4, and move all section 4 entries after it up
	  one number, since it no longer applies.  Meta-] and Meta-[ are
	  no longer used to indent and unindent marked text, since they
	  require that the bracket matching key change to Ctrl-], which
	  is used as the telnet escape key. (DLR, found by Chris)
	- Make the link to the nano CVS page a bit more readable. (DLR)
	- Update section 3.8 to mention the new "Unicode Input" prompt,
	  and how Unicode input only works when Unicode support is
	  enabled. (DLR)
	- Add minor punctuation, wording, and typo fixes. (DLR)
	- Update section 5.3, due to the display fix for two-column